# projeto-automatizacao-limpeza-dados

./: LICENSE  Makefile  README.md  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
src/core/: feature_extractor.py
